--- a/Infrastructure.Repositories/Infrastructure.Repositories.csproj
+++ b/Infrastructure.Repositories/Infrastructure.Repositories.csproj
@@ -36,6 +36,10 @@
     <Reference Include="EntityFramework.SqlServer">
       <HintPath>..\packages\EntityFramework.6.1.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="LiteDB, Version=1.0.4.0, Culture=neutral, PublicKeyToken=5c2fff750805920e, processorArchitecture=MSIL">
+      <HintPath>..\packages\LiteDB.1.0.4\lib\net40\LiteDB.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -47,15 +51,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataClasses\Category.cs" />
-    <Compile Include="DataClasses\DataEntity.cs" />
-    <Compile Include="DataClasses\Expenditure.cs" />
-    <Compile Include="DataClasses\Household.cs" />
-    <Compile Include="DataClasses\Income.cs" />
-    <Compile Include="DataClasses\User.cs" />
-    <Compile Include="HouseAccountingDbContext.cs" />
-    <Compile Include="HouseAccountingDbInitializer.cs" />
-    <Compile Include="Interfaces\IUnitOfWork.cs" />
+    <Compile Include="DbProvider.cs" />
+    <Compile Include="Interfaces\IDbProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\GenericRepository.cs" />
   </ItemGroup>
