--- a/HouseAccounting.DTO.Translators/packages.config
+++ b/HouseAccounting.DTO.Translators/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="4.1.1" targetFramework="net46" />
   <package id="Castle.Core" version="3.3.0" targetFramework="net46" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
-  <package id="LiteDB" version="1.0.4" targetFramework="net45" />
 </packages>
