--- a/HouseAccounting.Web/HouseAccounting.Web.csproj
+++ b/HouseAccounting.Web/HouseAccounting.Web.csproj
@@ -134,6 +134,12 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Installers\WebInstaller.cs" />
+    <Compile Include="Models\Persons\PersonDeleteViewModel.cs" />
+    <Compile Include="Models\Persons\PersonCreateViewModel.cs" />
+    <Compile Include="Models\Persons\PersonDetailsViewModel.cs" />
+    <Compile Include="Models\Persons\PersonEditViewModel.cs" />
+    <Compile Include="Models\Persons\PersonListViewModel.cs" />
     <Compile Include="Models\ViewModelBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WindsorControllerFactory.cs" />
@@ -178,9 +184,14 @@
     <Content Include="Views\Category\Index.cshtml" />
     <Content Include="Views\Category\Delete.cshtml" />
     <Content Include="Views\Category\Create.cshtml" />
+    <Content Include="Views\Person\Details.cshtml" />
+    <Content Include="Views\Person\Delete.cshtml" />
+    <Content Include="Views\Person\Edit.cshtml" />
+    <Content Include="Views\Person\PersonDetail.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Models\Categories\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -199,13 +210,13 @@
       <Project>{55e8d102-5cbe-428b-8309-f406c73c0a65}</Project>
       <Name>HouseAccounting.DTOS</Name>
     </ProjectReference>
+    <ProjectReference Include="..\HouserAccounting.Business\HouserAccounting.Business.csproj">
+      <Project>{f1c89212-724e-483f-a8ed-2b8adc935f4e}</Project>
+      <Name>HouserAccounting.Business</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Infrastructure.Repositories\Infrastructure.Repositories.csproj">
       <Project>{4edf72ad-8667-4e60-91a4-11f4a4c4b7e0}</Project>
       <Name>Infrastructure.Repositories</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Model\Model.csproj">
-      <Project>{8112858b-054c-420d-8d3d-7c167c66c59b}</Project>
-      <Name>Model</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
