--- a/HouseAccounting.Web/HouseAccounting.Web.csproj
+++ b/HouseAccounting.Web/HouseAccounting.Web.csproj
@@ -132,9 +132,11 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\ExpenditureCategoryController.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\IncomeCategoryController.cs" />
+    <Compile Include="Controllers\IncomeController.cs" />
     <Compile Include="Controllers\PersonController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -150,6 +152,11 @@
     <Compile Include="Models\IncomeCategories\IncomeCategoryDetailsViewModel.cs" />
     <Compile Include="Models\IncomeCategories\IncomeCategoryEditViewModel.cs" />
     <Compile Include="Models\IncomeCategories\IncomeCategoryListViewModel.cs" />
+    <Compile Include="Models\Incomes\IncomeEditViewModel.cs" />
+    <Compile Include="Models\Incomes\IncomeDetailsViewModel.cs" />
+    <Compile Include="Models\Incomes\IncomeDeleteViewModel.cs" />
+    <Compile Include="Models\Incomes\IncomeCreateViewModel.cs" />
+    <Compile Include="Models\Incomes\IncomeListViewModel.cs" />
     <Compile Include="Models\Persons\PersonDeleteViewModel.cs" />
     <Compile Include="Models\Persons\PersonCreateViewModel.cs" />
     <Compile Include="Models\Persons\PersonDetailsViewModel.cs" />
@@ -215,6 +222,13 @@
     <Content Include="Views\ExpenditureCategory\Details.cshtml" />
     <Content Include="Views\ExpenditureCategory\Edit.cshtml" />
     <Content Include="Views\ExpenditureCategory\Index.cshtml" />
+    <Content Include="Views\Income\Index.cshtml" />
+    <Content Include="Views\Income\Create.cshtml" />
+    <Content Include="Views\Income\Delete.cshtml" />
+    <Content Include="Views\Income\IncomeDetail.cshtml" />
+    <Content Include="Views\Income\Details.cshtml" />
+    <Content Include="Views\Income\Edit.cshtml" />
+    <Content Include="Views\Income\IncomeEdit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
