--- a/Infrastructure.Repositories/App.config
+++ b/Infrastructure.Repositories/App.config
@@ -4,9 +4,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
 
-  <connectionStrings>
-    <add name="HouseAccounting" providerName="System.Data.SqlServerCe.4.0" connectionString="Data Source=C:\temp\HomeAccounting.sdf"/>
-  </connectionStrings>
+  <appSettings>
+    <add key="HouseAccountingConnectionString" value="C:\temp\HomeAccounting.db"/>
+  </appSettings>
 
   <entityFramework>
     <providers>
@@ -19,5 +19,8 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
-  
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/></startup></configuration>
+
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
+  </startup>
+</configuration>
