--- a/HouseAccounting.Web/Web.config
+++ b/HouseAccounting.Web/Web.config
@@ -9,9 +9,20 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="HouseAccountingConnectionString" value="C:\Projects\HouseAccounting.db"/>
+    <add key="HouseAccountingConnectionString" value="C:\Projects\HouseAccounting.db" />
   </appSettings>
   <system.web>
+    <pages>
+  <namespaces>
+    <add namespace="System.Web.Mvc" />
+    <add namespace="System.Web.Mvc.Ajax" />
+    <add namespace="System.Web.Mvc.Html" />
+    <add namespace="System.Web.Routing" />
+    <add namespace="System.Linq" />
+    <add namespace="System.Collections.Generic" />
+    <add namespace="HouseAccounting.DTOS" />
+  </namespaces>
+</pages>
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
   </system.web>
