--- a/HouseAccounting.DTOS/HouseAccounting.DTOS.csproj
+++ b/HouseAccounting.DTOS/HouseAccounting.DTOS.csproj
@@ -42,8 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CategoryDto.cs" />
+    <Compile Include="DtoExtensions.cs" />
     <Compile Include="ExpenditureDto.cs" />
     <Compile Include="IncomeDto.cs" />
+    <Compile Include="MonthlyItemDto.cs" />
     <Compile Include="PersonDto.cs" />
     <Compile Include="PersonExpenditureDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
