--- a/HouseAccounting.Web/HouseAccounting.Web.csproj
+++ b/HouseAccounting.Web/HouseAccounting.Web.csproj
@@ -245,6 +245,7 @@
     <Content Include="Views\Expenditure\ExpenditureDetail.cshtml" />
     <Content Include="Views\Expenditure\ExpenditureEdit.cshtml" />
     <Content Include="Views\Expenditure\Index.cshtml" />
+    <Content Include="Views\Shared\_QuickExpenditure.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
