--- a/HouserAccounting.Business/HouseAccounting.Business.csproj
+++ b/HouserAccounting.Business/HouseAccounting.Business.csproj
@@ -30,6 +30,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Core.3.3.0\lib\net45\Castle.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Castle.Windsor, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Windsor.3.3.0\lib\net45\Castle.Windsor.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="LiteDB, Version=1.0.4.0, Culture=neutral, PublicKeyToken=5c2fff750805920e, processorArchitecture=MSIL">
       <HintPath>..\packages\LiteDB.1.0.4\lib\net40\LiteDB.dll</HintPath>
       <Private>True</Private>
@@ -52,6 +60,7 @@
     <Compile Include="Classes\IncomeCategory.cs" />
     <Compile Include="Classes\MonthlyItem.cs" />
     <Compile Include="Classes\Person.cs" />
+    <Compile Include="Installers\BusinessInstaller.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IExpenditureCategoryRepository.cs" />
     <Compile Include="Repositories\IExpenditureRepository.cs" />
@@ -59,6 +68,7 @@
     <Compile Include="Repositories\IIncomeCategoryRepository.cs" />
     <Compile Include="Repositories\IIncomeRepository.cs" />
     <Compile Include="Repositories\IPersonRepository.cs" />
+    <Compile Include="Services\IMonthlyStatisticsService.cs" />
     <Compile Include="Services\MonthlyStatisticsService.cs" />
     <Compile Include="Specifications\ISpecification.cs" />
   </ItemGroup>
