--- a/HouseAccounting.Web/Web.config
+++ b/HouseAccounting.Web/Web.config
@@ -20,7 +20,7 @@
     <add namespace="System.Web.Routing" />
     <add namespace="System.Linq" />
     <add namespace="System.Collections.Generic" />
-    <add namespace="HouseAccounting.DTOS" />
+    <add namespace="HouseAccounting.Web" />
   </namespaces>
 </pages>
     <compilation debug="true" targetFramework="4.6" />
