--- a/HouserAccounting.Business/HouseAccounting.Business.csproj
+++ b/HouserAccounting.Business/HouseAccounting.Business.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Classes\IncomeCategory.cs" />
     <Compile Include="Classes\IncomeTemplate.cs" />
     <Compile Include="Classes\IncomeTemplateItem.cs" />
+    <Compile Include="Classes\MonthlyData.cs" />
     <Compile Include="Classes\MonthlyItem.cs" />
     <Compile Include="Classes\Person.cs" />
     <Compile Include="Installers\BusinessInstaller.cs" />
