--- a/HouseAccounting.Web/Web.Debug.config
+++ b/HouseAccounting.Web/Web.Debug.config
@@ -15,7 +15,7 @@
     </connectionStrings>
   -->
   <appSettings>
-    <add key="HouseAccountingConnectionString" value="C:\Projects\HouseAccountingTest.db" xdt:Transform="Replace"  />
+    <add key="HouseAccountingConnectionString" value="C:\Projects\HouseAccountingTest.db" xdt:Transform="Replace" xdt:Locator="Match(key)" />
   </appSettings>
   <system.web>
     <!--
