--- a/HouseAccounting.Web/Web.config
+++ b/HouseAccounting.Web/Web.config
@@ -12,6 +12,7 @@
     <add key="HouseAccountingConnectionString" value="C:\Projects\HouseAccounting.db" />
   </appSettings>
   <system.web>
+    <globalization uiCulture="cs-CZ" culture="cs-CZ"/>
     <pages>
   <namespaces>
     <add namespace="System.Web.Mvc" />
