--- a/HouseAccounting.Web/Web.config
+++ b/HouseAccounting.Web/Web.config
@@ -10,9 +10,10 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="HouseAccountingConnectionString" value="C:\Projects\HouseAccounting.db" />
+    <add key="PageSize" value="20" />  
   </appSettings>
   <system.web>
-    <globalization uiCulture="cs-CZ" culture="cs-CZ"/>
+    <globalization uiCulture="cs-CZ" culture="cs-CZ" />
     <pages>
   <namespaces>
     <add namespace="System.Web.Mvc" />
@@ -47,11 +48,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
